# extrator_cnpj

./: .env.example  .gitignore  AGENTS.md  Dockerfile  SPEC.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  salvar_etl_completo.bat
.claude/: settings.local.json
app/: config.py  database.py  main.py
app/api/v1/: cnpj.py  empresas.py  metrics.py
app/core/: cache.py  exceptions.py  logging.py  metrics.py
app/middleware/: __init__.py  api_key.py  rate_limit.py  request_id.py  request_logging.py  security_headers.py
app/models/: __init__.py  cnae.py  empresa.py  estabelecimento.py  importacao.py  motivo.py  municipio.py  natureza.py  pais.py  qualificacao.py  simples.py  socio.py
app/schemas/: api_responses.py  empresa.py  estabelecimento.py  socio.py
deploy/: .env.example  download_cnpj.sh  setup.sh
docs/: API.md  DATA_CONTRACTS.md  ETL.md
etl/: orchestrator.py
etl/processors/: cnaes_processor.py  empresas_processor.py  estabelecimentos_processor.py  motivos_processor.py  municipios_processor.py  naturezas_processor.py  paises_processor.py  qualificacoes_processor.py  reference_processor.py  simples_processor.py  socios_processor.py
etl/utils/: file_hash.py  normalize.py  postgres_copy.py
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_auxiliary_enrichment.py  0003_indexes_and_fixes.py  0004_performance_indexes.py  0005_socios_unique_constraint.py  0006_fix_indices_and_socios_unique.py
scripts/: salvar_etl_completo.bat
