[project]
name = "extrator-cnpj"
version = "1.0.0"
description = "API de consulta de dados publicos de CNPJ da Receita Federal"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app", "etl"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false
